force-app/main/default/objects/leaseworks__Counterparty_Payment__c/leaseworks__Counterparty_Payment__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Z_unused_2012 Payment</label>
    <nameField>
        <label>Z_unused_2012 Payment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_unused_2012 Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>