force-app/main/default/objects/leaseworks__Counterparty_Payment__c/fields/leaseworks__Invoice_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Invoice_Type__c</fullName>
    <label>Invoice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Finance Lease</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>