force-app/main/default/objects/leaseworks__Counterparty_Payment__c/fields/leaseworks__Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Payment_Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Payment Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>