force-app/main/default/objects/leaseworks__Counterparty_Payment__c/fields/leaseworks__Posted_to_GL_F__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Posted_to_GL_F__c</fullName>
    <formula>leaseworks__XML_Sent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Posted To GL?</label>
    <type>Checkbox</type>
</CustomField>