force-app/main/default/objects/leaseworks__Counterparty_Payment__c/fields/leaseworks__XML_Sent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__XML_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>_XML Sent</label>
    <type>Checkbox</type>
</CustomField>