force-app/main/default/objects/leaseworks__Counterparty_Payment__c/validationRules/leaseworks__Total_Payment_Amount_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Total_Payment_Amount_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>leaseworks__Amount__c &lt;=0</errorConditionFormula>
    <errorMessage>Amount must be greater than zero.</errorMessage>
</ValidationRule>