force-app/main/default/objects/leaseworks__Counterparty_Payment__c/validationRules/leaseworks__Type_Mismatch.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Type_Mismatch</fullName>
    <active>true</active>
    <description>Invoice Type and Payment type must match</description>
    <errorConditionFormula>TEXT(leaseworks__Invoice_Type__c) !=  TEXT(leaseworks__Invoice__r.leaseworks__Invoice_Type__c)</errorConditionFormula>
    <errorDisplayField>leaseworks__Invoice_Type__c</errorDisplayField>
    <errorMessage>Payment Type must be the same as Invoice Type.</errorMessage>
</ValidationRule>